dfir_rs/tests/snapshots/surface_scheduling__stratum_loop@graphvis_dot.snap
---
source: dfir_rs/tests/surface_scheduling.rs
assertion_line: 22
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) source_iter([TickInstant::new(0)])", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n3v1 [label="(n3v1) tee()", shape=house, fillcolor="#ffff88"]
    n4v1 [label="(n4v1) map(|n| n + TickDuration::SINGLE_TICK)", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) filter(|&n| n < TickInstant::new(10))", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) defer_tick()", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) for_each(|v| out_send.send(v).unwrap())", shape=house, fillcolor="#ffff88"]
    n8v1 [label="(n8v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n9v1 [label="(n9v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n2v1 -> n3v1
    n6v1 -> n2v1
    n5v1 -> n8v1
    n4v1 -> n5v1
    n3v1 -> n9v1
    n3v1 -> n7v1
    n8v1 -> n6v1 [color=red]
    n9v1 -> n4v1
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1"
        n6v1
        n1v1
        n7v1
        subgraph sg_1v1_var_union_tee {
            cluster=true
            label="var union_tee"
            n2v1
            n3v1
        }
    }
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1"
        n4v1
        n5v1
    }
}
